=== 0.3.0 :: 2008-06-19

  * Restr has been moved out to its own gem, and should now work properly with 
    Rails 2.x (fixes bug #17421).
  * `R` helper method should now work properly when a Restful controlelr class 
    is fed as input along with a custom action. The final argument can be a Hash 
    and will be translated into URL parameters. For example: 
      R(Kittens, 'list', 'colour' => 'black') 

=== 0.2.0 :: 2007-12-10

  * It is now possible to specify the format for rendering a page by appending
    it as a filename extension to the URL. For example: '/items.xml' to use the XML
    view module, or '/items/5.rss' to use the RSS module.
  * Custom actions are now possible. Custom methods defined in your controller will 
    respond to the standard custom-action URLs. For example, if you have a method
    'foo' in your 'kittens' controller, you can get to it by requesting the URL
    '/kittens/foo' or '/kittens/1/foo'. Note that the action will respond to any
    HTTP method (post, get, put, delete). It is up to you to handle different
    request methods inside your action's definition.
  * XML input (from an ActiveResource client, for example) is now parsed into a
    nested Hash, and is made available as the standard @input Camping variable.
  * HTML forms created using Markaby (i.e. by just using `form`) that
    have a :method parameter now automatically insert a hidden '_method' input to
    facilitate 'put' and 'delete' HTTP methods for HTML browsers.
  * Pages now correctly return HTTP status code 501 when an unimplemented controller 
    method is called. ActiveRecord::NotFound exceptions are caught and return 404 
    status.
  * R helper now works for routing RESTful controllers.

=== 0.1.0 :: 2007-07-30

  * First public release.